# The bazel build file for the open source version.
# Bazel allows us to use the exact same code between google3 and open source.
# We simply export just the bazel build file

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_binary")

closure_js_binary(
    name = "pay",
    deps = [
        ":payjs",
    ],
)

closure_js_binary(
    name = "pay_simple",
    deps = [
        ":payjs",
    ],
    compilation_level='SIMPLE',
)

closure_js_library(
    name = "payjs",
    srcs = [
        "button.js",
        "constants.js",
        "element_injector.js",
        "payjs.js",
        "payjs_async.js",
        "paymentsclient_externs.js",
        "payments_client_delegate_interface.js",
        "payments_request_delegate.js",
        "payments_web_activity_delegate.js",
        "pay_externs.js",
        "pay_frame_helper.js",
        "post_message_service.js",
        "validator.js",
    ],
    suppress = [
        "JSC_UNKNOWN_EXPR_TYPE",
        "JSC_INEXISTENT_PROPERTY",
        "JSC_STRICT_INEXISTENT_PROPERTY",
    ],
    deps = [
        "//third_party/web_activities:port",
        "//third_party/random_uuid:uuid",
    ],
)

closure_js_library(
    name = "payjs_externs",
    srcs = [
        "pay_externs.js",
        "paymentsclient_externs.js",
    ],
)

closure_js_library(
    name = "payjs_validator",
    srcs = [
        "validator.js",
        "constants.js",
    ],
    suppress = [
        "JSC_UNKNOWN_EXPR_TYPE",
    ],
)

